# aerleon_acl_gen_demo

./: .flake8  .yamllint  Makefile  README.md  build_acl.py  pyproject.toml
def/: definitions.yaml
policies/pol/: asa.pol.yaml  srx.pol.yaml
tests/: test_acl_gen.py
