[tool.poetry]
name = "aerleon-demo"
version = "0.1.0"
description = ""
authors = ["Rick Donato <rick.donato@packetcoders.io>"]
readme = "README.md"
packages = [{include = "aerleon_demo"}]

[tool.poetry.dependencies]
python = "^3.8.0"
aerleon = "^1.0.1"
rich = "^13.2.0"
ipython = "^8.8.0"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^22.12.0"
autoflake = "^2.0.0"
isort = "^5.11.4"
bandit = "^1.7.4"
flake8 = {version="^6.0.0", python=">=3.8.1,<4.0.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
exclude_dirs = ["venv", ".venv", "tests"]

[tool.black]
exclude = "(venv, .venv)"

[tool.isort]
profile = "black"
skip = "venv, .venv"
balanced_wrapping = true
atomic = true

[tool.pydocstyle]
inherit = false
match = '((?!excluded_file).)*\.py'
match_dir = '^(?!(venv|.venv|tests)).*'

[tool.mypy]
exclude = ['venv', '.venv']
pretty = true
ignore_missing_imports = true